Fixed alignment in header

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -2,6 +2,7 @@
 .site-header {
   background-color: $color-base;
   padding: $std-padding*4 0;
+  align-items: center;
 
   .site-title {
     text-transform: uppercase;
